# AuotoDrafter-AI

./: Cargo.toml  README.md
src/: main.rs
src/agents/: mod.rs
src/agents/letter_agents/: chatbot_letter.rs  content_generators.rs  coversation_converter.rs  letter.html  mod.rs
src/agents/pleading_agents/: facts_generator.rs  legal_defense_generator.rs  mod.rs  pleading.html  pleading_content.rs
src/apis/: letter_request.rs  mod.rs  ocr.rs  pleadings_request.rs
src/audio_processing/: mod.rs  process_audio.rs
src/models/: auto_drafter_object.rs  mod.rs
src/ocr/: mod.rs  ocr_reader.rs  pdf_to_image.rs
