[package]
name = "letter_backend"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
tokio-util = "0.7"
reqwest = { version = "0.11", features = ["blocking", "json", "multipart", "stream"] }
dotenv = "0.15"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
actix-web = "4"
actix-cors = "0.6"
actix-multipart = "0.5"
futures = "0.3"
regex = "1"
image = "0.25.4"
tesseract = "0.15.1"
pdf = "0.9.0"
futures-util = "0.3.31"
tempfile = "3.13.0"
